# KU-PMPH-25

./: .gitignore  README.md  out_128_sweep.csv  out_64_sweep.csv  requirements.txt  setup_env.sh
project/: .gitignore  CMakeLists.txt  README.md  out_128_sweep.csv  requirements.txt
project/include/: attention.cuh  attention.h  flash_attention.cuh  flash_attention.h
project/python/: attention_benchmark.cpp  benchmark.py  parameter_optimization.py  plotting.py  plotting_benchmarks.py  plotting_out_of_memory.py  run_benchmark.py
project/src/: benchmark_main.cpp  utils.cu  utils.h
project/src/attention/: attention.cpp  attention.cu  attention.h  attention_kernel.cu.h
project/src/flash_attention/: flash_attention.cpp  flash_attention.cu  flash_attention.h  flash_attention_kernel.cu  flash_attention_kernel.cu.h  utils.h
src/: utils.h
src/flash_attention/: flash_attention.cpp  flash_attention.h  flash_attention_kernel.cu
w3/batch-mmm/: kernels.cu.h
w3/gpu-coalescing/: goldenSeq.h  kernels.cu.h
w3/histo-L3-thrashing/: kernels.cu.h  main-gpu.cu
w3/mmm/: kernels.cu.h
